--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "font-awesome": "^4.7.0",
     "loading-animations-react": "^1.3.3",
     "materialize-css": "^1.0.0-rc.2",
+    "netlify-cli": "^12.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-card-slide": "^1.0.13",
@@ -31,6 +32,9 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
+  },
+  "engines": {
+    "node": "14.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
